Spring application properties.

--- a/di-demo/src/main/resources/application.properties
+++ b/di-demo/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.profiles.active=
+spring.profiles.active=ua
+
+
+guru.username=Stas
+guru.password=pass
+guru.dburl=test
+
+guru.jms.username=username
+guru.jms.password=pass
+guru.jms.url=url
