--- a/springTest/src/main/resources/application.properties
+++ b/springTest/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+spring.datasource.url=jdbc:postgresql://localhost/SpringBootTest
+spring.datasource.username=postgres
+spring.datasource.password=6264
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
